# stfc-parser

./: .gitignore  README.md  pyproject.toml
stfc_parser/: AbstractSectionParser.py  BattleSectionParser.py  Combatants.py  Delegator.py  FleetSectionParser.py  LootSectionParser.py  PlayerSectionParser.py  SessionInfo.py  ShipSpecifier.py  Team.py  parser_stub.py  teams.py
stfc_parser/algebra/: NonNormalizedGVS.py  NormalizedGVS.py
stfc_parser/core/: Combatants.py  Crew.py  FilterCombatDataframeByCombatant.py  FixPlayersDataframe.py  Outcome.py  Ships.py
stfc_parser/rough/: derive_metrics.py
stfc_parser/schemas/: CombatSchema.py  FleetsSchema.py  LootSchema.py  PlayersSchema.py  SchemaValidation.py  __init__.py  schema_helpers.py
tests/: conftest.py  helpers.py  test_all_officer_names.py  test_get_every_ship.py  test_outcome_lookup.py  test_session_info_filters.py  test_smoke.py
tests/smoketest-logs/: 2024-09-10 15-44-04.csv  2024-11-25 18-41-04-BC.csv  2024-11-25 19-13-22-rbc.csv  2024-11-29 03-10-28-car.csv  2024-12-12 15-41-37-fkr.csv  2024-12-13 15-19-38-card.csv  2024-12-14 12-56-06-borg-solo.csv  2024-12-18 15-07-56-dom-6.csv  2024-12-18 15-07-56-dom-62.csv  2024-12-19 18-07-29.csv  2024-12-20 11-33-21-eclipse.csv  2024-12-20 12-34-23-eclipse6.csv  2024-12-27 10-59-58-gorn.csv  2025-01-17 10-24-15.csv  2025-01-18 14-37-06.csv  2025-01-22 18-04-50.csv  2025-01-29 20-47-25.csv  2025-02-09 11-31-46-dom-solo.csv  2025-02-12 14-42-36-44kre.csv  2025-02-15 19-54-03.csv  2025-02-20 13-26-30.csv  2025-02-20 15-19-07.csv  2025-02-23 14-31-13-kform.csv  (+105 more)
