[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stfc_parser"
version = "0.0.1"
# Widened for better server compatibility
requires-python = ">=3.11,<3.14"
dependencies = [
  "pandas>=2.2",
  "pandera>=0.28.1",
  "toml>=0.10.2",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pdoc]
output_directory = "docs"
exclude = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]